RESOLVED FIXED144119
Quick Look preview popover is not dismissed on scroll in Mail
https://bugs.webkit.org/show_bug.cgi?id=144119
Summary Quick Look preview popover is not dismissed on scroll in Mail
Tim Horton
Reported 2015-04-23 13:52:31 PDT
Quick Look preview popover is not dismissed on scroll in Mail
Attachments
Patch (1.60 KB, patch)
2015-04-23 13:52 PDT, Tim Horton
andersca: review+
Tim Horton
Comment 1 2015-04-23 13:52:52 PDT
Tim Horton
Comment 2 2015-04-23 16:19:53 PDT
Note You need to log in before you can comment on or make changes to this bug.