Quick Look preview popover is not dismissed on scroll in Mail https://bugs.webkit.org/show_bug.cgi?id=144119 <rdar://problem/19752045>

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKView.mm:
(-[WKView renewGState]):
If we have a TextIndicator, dismiss all content relative child windows
on renewGState, not just the TextIndicator itself.

This will fix cases like Mail, where WebKit isn't driving the scrolling,
and we have no way (except renewGState) to know that scrolling is happening.


Canonical link: https://commits.webkit.org/162103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183228 268f45cc-cd09-0410-ab3c-d52691b4dbfc